Another pile of structural changes mostly related to unit testing - Moves the engine unit tests to its own sub-project - Assorted Gradle cleanup - More debug logging for troubleshooting working directory vs. location of natives (still problematic in several scenarios) - Some initial prep for better Eclipse support (the unit test move in particular helps avoid weird dependencies)